istio/Traffic Management/deployment_v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: node
    version: v2
  name: node-app-v2
spec:
  replicas: 1
  selector:
    matchLabels:
       app: node
       version: v2

  template:
    metadata:
      labels:
         app: node
         version: v2
    spec:
      containers:
      - image:  farhanluckali/node-helloworld:2022-06-21--44-11
        name: node
        imagePullPolicy: Always
