istio/Traffic Management/version_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app1
  annotations:
  labels:
    app: node
spec:
  type: NodePort
  ports:
  - name: http
    port: 4001
    targetPort: 4001
  selector:
    app: node
