istio/Traffic Management/Gateway_and_vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: node-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: node-vs
spec:
  hosts:
  - "*"
  gateways:
  - node-gateway
  http:
  - route:
    - destination:
        host: node-svc
        port:
          number: 4001
