istio/Traffic Management/virtulservice_90_10.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nodeapp-traffic-90-10
spec:
  hosts:
    - node-svc
  http:
  - route:
    - destination:
        host: node
        subset: v1
      weight: 90
    - destination:
        host: reviews
        subset: v2
      weight: 10
