istio/Traffic Management/vs_with_destinationrule.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: node-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  namespace: default
  name: node-svc
  labels:
    kiali_wizard: traffic_shifting
spec:
  http:
    - route:
        - destination:
            host: node-svc.default.svc.cluster.local
            port:
                number: 4001
            subset: v1
          weight: 90
        - destination:
            host: node-svc.default.svc.cluster.local
            port:
                number: 4001
            subset: v2
          weight: 10
  hosts:
    - "*"
  gateways:
    - default/node-gateway
---
kind: DestinationRule
apiVersion: networking.istio.io/v1beta1
metadata:
  namespace: default
  name: node-svc
  labels:
    kiali_wizard: traffic_shifting
  annotations: ~
spec:
  host: node-svc.default.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
  trafficPolicy: ~
